Add jumbotron text, image

--- a/src/app.scss
+++ b/src/app.scss
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 @import "partials/common";
 @import "partials/header";
+@import 'partials/variables';
 /* ROOT */
 :root {
   --font-color: #5e4e32;
